es gab ein paar Fehler aber ich habe es korrigiert. Wir können es morgen angucken

--- a/emensa/public/css/bewertung_styles.css
+++ b/emensa/public/css/bewertung_styles.css
@@ -46,6 +46,7 @@ label[for="sterne"]{
     margin-bottom: -2px;
 }
 .scrollTable{
+    border: 1px solid black;
     width: 100%;
     max-height: 120px;
     overflow: hidden;
